<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNoteDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_details"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/textViewNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/note_add_input_name"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textViewNoteDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewNoteContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/note_add_input_contents"
        app:layout_constraintTop_toBottomOf="@id/textViewNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/buttonDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_delete"
        app:layout_constraintTop_toBottomOf="@id/textViewNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>