<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.noteapp.FirstFragment"

        android:label="@string/notes_list"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
        <action
            android:id="@+id/action_firstFragment_to_thirdFragment"
            app:destination="@id/thirdFragment" />
    </fragment>

    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.noteapp.SecondFragment"
        android:label="@string/note_add"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_secondFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
    </fragment>

    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.noteapp.ThirdFragment"
        android:label="@string/note_details"
        tools:layout="@layout/fragment_third">
        <argument
            android:name="noteId"
            app:argType="string" />
    </fragment>

</navigation>